--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Project Aquamarine</string>
+    <string name="camera">Camera</string>
+    <string name="stand">Stand</string>
+    <string name="settings">Settings</string>
 </resources>
