--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,10 @@
     <string name="camera">Camera</string>
     <string name="stand">Stand</string>
     <string name="settings">Settings</string>
+    <string name="openingstock">Opening Stock</string>
+    <string name="stock_change">Stock Change</string>
+    <string name="closing_stock">Closing Stock</string>
+    <string name="save">Save</string>
+    <string name="clock_name">Clock name</string>
+    <string name="time">Time</string>
 </resources>
